submissions/98.error
  File "tmp.py", line 57
    if __name__ == '__main__' :
    ^
IndentationError: expected an indented block
